# yolo-inference

./: Dockerfile  README.md
cpp/: CMakeLists.txt  decode.cu  decode.cuh  decode.h  main.cpp  preprocess.cu  preprocess.h  run.bat  run.sh  test.sh  utils.cpp  utils.h  yolo.cpp  yolo.h  yolo_classification.h  yolo_classify.h  yolo_detect.h  yolo_detection.h  yolo_libtorch.cpp  yolo_libtorch.h  yolo_obb.h  yolo_onnxruntime.cpp  yolo_onnxruntime.h  yolo_opencv.cpp  yolo_opencv.h  yolo_openvino.cpp  yolo_openvino.h  yolo_pose.h  yolo_segment.h  yolo_segmentation.h  yolo_tensorrt.cpp  yolo_tensorrt.h  yolov5.cpp  yolov5.h  yolov5_libtorch.cpp  yolov5_libtorch.h  yolov5_onnxruntime.cpp  yolov5_onnxruntime.h  yolov5_opencv.cpp  yolov5_opencv.h  (+4 more)
cpp/libtorch/: CMakeLists.txt  yolo_libtorch.cpp  yolo_libtorch.h  yolo_libtorch_classify.cpp  yolo_libtorch_detect.cpp  yolo_libtorch_obb.cpp  yolo_libtorch_pose.cpp  yolo_libtorch_segment.cpp
cpp/onnxruntime/: CMakeLists.txt  yolo_onnxruntime.cpp  yolo_onnxruntime.h  yolo_onnxruntime_classify.cpp  yolo_onnxruntime_detect.cpp  yolo_onnxruntime_obb.cpp  yolo_onnxruntime_pose.cpp  yolo_onnxruntime_segment.cpp
cpp/opencv/: CMakeLists.txt  yolo_opencv.cpp  yolo_opencv.h  yolo_opencv_classify.cpp  yolo_opencv_detect.cpp  yolo_opencv_obb.cpp  yolo_opencv_pose.cpp  yolo_opencv_segment.cpp
cpp/openvino/: CMakeLists.txt  yolo_openvino.cpp  yolo_openvino.h  yolo_openvino_classify.cpp  yolo_openvino_detect.cpp  yolo_openvino_obb.cpp  yolo_openvino_pose.cpp  yolo_openvino_segment.cpp
cpp/tensorrt/: CMakeLists.txt  decode.cu  decode.cuh  preprocess.cu  preprocess.cuh  yolo_tensorrt.cpp  yolo_tensorrt.h  yolo_tensorrt_classify.cpp  yolo_tensorrt_detect.cpp  yolo_tensorrt_obb.cpp  yolo_tensorrt_pose.cpp  yolo_tensorrt_segment.cpp
cpp/tensorrt/cuda/: decode.cu  decode.cuh  preprocess.cu  preprocess.cuh
python/: main.py  requirements.txt  run.bat  run.sh  test.sh  utils.py  yolo.py  yolo_onnxruntime.py  yolo_opencv.py  yolo_openvino.py  yolo_tensorrt.py  yolov5.py  yolov5_onnxruntime.py  yolov5_opencv.py  yolov5_openvino.py  yolov5_tensorrt.py
python/backends/: __init__.py  utils.py  yolo.py
python/backends/ONNXRuntime/: __init__.py  yolo_onnxruntime.py  yolo_onnxruntime_classify.py  yolo_onnxruntime_detect.py  yolo_onnxruntime_obb.py  yolo_onnxruntime_pose.py  yolo_onnxruntime_segment.py
python/backends/OpenCV/: __init__.py  yolo_opencv.py  yolo_opencv_classify.py  yolo_opencv_detect.py  yolo_opencv_obb.py  yolo_opencv_pose.py  yolo_opencv_segment.py
python/backends/OpenVINO/: __init__.py  yolo_openvino.py  yolo_openvino_classify.py  yolo_openvino_detect.py  yolo_openvino_obb.py  yolo_openvino_pose.py  yolo_openvino_segment.py
python/backends/PyTorch/: __init__.py  yolo_pytorch.py  yolo_pytorch_classify.py  yolo_pytorch_detect.py  yolo_pytorch_obb.py  yolo_pytorch_pose.py  yolo_pytorch_segment.py
python/backends/TensorRT/: __init__.py  common_trt10.py  yolo_tensorrt.py  yolo_tensorrt_classify.py  yolo_tensorrt_detect.py  yolo_tensorrt_obb.py  yolo_tensorrt_pose.py  yolo_tensorrt_segment.py
