cmake_minimum_required(VERSION 3.22)

option(WITH_LIBTORCH "build _YOLO_LIBTORCH" ON)
option(WITH_ONNXRUNTIME "build _YOLO_ONNXRUNTIME" ON)
option(WITH_OPENCV "build _YOLO_OPENCV" ON)
option(WITH_OPENVINO "build _YOLO_OPENVINO" ON)
option(WITH_TENSORRT "build _YOLO_TENSORRT" ON)
option(WITH_CUDA "build _WITH_CUDA" ON)
option(WITH_CUDA_PREPROCESS "build _CUDA_PREPROCESS" ON)
option(WITH_CUDA_POSTPROCESS "build _CUDA_POSTPROCESS" ON)

if(WITH_CUDA)
    set(CMAKE_CUDA_COMPILER "/usr/local/cuda/bin/nvcc")
    project(yolo LANGUAGES C CXX CUDA)
else()
    project(yolo LANGUAGES C CXX)
endif()

file(GLOB SRCS *.h *.cpp)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_compile_options(-w)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_BUILD_TYPE "Release")
set(BACKEND_LIBS "")

find_package(OpenCV REQUIRED)
include_directories(/usr/include/eigen3)
include_directories(${OpenCV_INCLUDE_DIRS} ${OpenCV2_INCLUDE_DIRS})

if(WITH_LIBTORCH)
    set(Torch_DIR /workspace/libtorch/share/cmake/Torch)
    find_package(Torch REQUIRED)
    include_directories(${TORCH_INCLUDE_DIRS})
    add_subdirectory(libtorch)
    list(APPEND BACKEND_LIBS torch_backend)
    add_compile_options(-D_YOLO_LIBTORCH)
endif()

if(WITH_ONNXRUNTIME)
    set(ONNXRUNTIME_INCLUDE_DIRS /workspace/onnxruntime-linux-x64-gpu-1.22.0/include)
    set(ONNXRUNTIME_LIBRARY_DIRS /workspace/onnxruntime-linux-x64-gpu-1.22.0/lib)
    include_directories(${ONNXRUNTIME_INCLUDE_DIRS})
    add_subdirectory(onnxruntime)
    list(APPEND BACKEND_LIBS onnxruntime_backend)
    add_compile_options(-D_YOLO_ONNXRUNTIME)
endif()

if(WITH_OPENCV)
    add_subdirectory(opencv)
    list(APPEND BACKEND_LIBS opencv_backend)
    add_compile_options(-D_YOLO_OPENCV)
endif()

if(WITH_OPENVINO)
    list(APPEND CMAKE_PREFIX_PATH /workspace/openvino_toolkit_ubuntu24_2025.2.0.19140.c01cd93e24d_x86_64/runtime/cmake)
    set(OPENVINO_INCLUDE_DIRS /workspace/openvino_toolkit_ubuntu24_2025.2.0.19140.c01cd93e24d_x86_64/runtime/include)
    find_package(OpenVINO REQUIRED)  
    include_directories(${OPENVINO_INCLUDE_DIRS})
    add_subdirectory(openvino)
    list(APPEND BACKEND_LIBS openvino_backend)
    add_compile_options(-D_YOLO_OPENVINO)
endif()

if(WITH_CUDA AND WITH_TENSORRT)
    set(TENSORRT_INCLUDE_DIRS /usr/include/x86_64-linux-gnu)
    include_directories(${TENSORRT_INCLUDE_DIRS})
    if(WITH_CUDA_PREPROCESS)
        add_compile_options(-D_CUDA_PREPROCESS)
        if(WITH_CUDA_POSTPROCESS)
            add_compile_options(-D_CUDA_POSTPROCESS)
        endif()
    endif()
    add_subdirectory(tensorrt)
    list(APPEND BACKEND_LIBS tensorrt_backend)
    add_compile_options(-D_YOLO_TENSORRT)
endif()

if(WITH_CUDA)
    find_package(CUDA REQUIRED)
    include_directories(${CUDA_INCLUDE_DIRS})
    cuda_add_executable(yolo ${SRCS})
else()
    add_executable(yolo ${SRCS})
endif()

target_link_libraries(yolo ${OpenCV_LIBRARIES} ${CUDA_LIBRARIES} ${BACKEND_LIBS})  